src/language/snapshots/java_analyzer__language__java__tests__location_precedence_member_vs_type_positions.snap
---
source: src/language/java.rs
expression: out
---
member=MemberAccess { receiver_semantic_type: None, receiver_type: None, member_prefix: "put", receiver_expr: "a", arguments: None }
member_alt=MemberAccess { receiver_semantic_type: None, receiver_type: None, member_prefix: "a", receiver_expr: "a", arguments: None }
generic=TypeAnnotation { prefix: "Bo" }
ctor_generic=TypeAnnotation { prefix: "In" }
