src/language/snapshots/java_analyzer__language__java__tests__plain_array_parameter_and_var_materialization.snap
---
source: src/language/java.rs
expression: snapshot
---
location=Expression { prefix: "a" }
locals=
a:var
numbers:int[]
local_candidates=
a|descriptor=int[]|detail_has_array=true
