src/language/snapshots/java_analyzer__language__java__tests__varargs_parameter_metadata_and_body_locals.snap
---
source: src/language/java.rs
expression: snapshot
---
methods=
join|flags=137|params=["LString;", "[LString;"]|param_names=["separator", "parts"]
printNumbers|flags=137|params=["[I"]|param_names=["numbers"]
locals=
a:var
numbers:int[]
local_candidates=
a|descriptor=int[]|detail_has_array=true
